# nyne

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  USAGE.md  WORKFLOWS.md  build.rs  clippy.toml  config.example.toml  deny.toml  justfile  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml
nyne/: CLAUDE.md  Cargo.toml
nyne/benches/: routing.rs
nyne/src/: edit.rs  err.rs  lib.rs  path_utils.rs  prelude.rs  test_support.rs  topo.rs
nyne/src/cli/: attach.rs  config.rs  ctl.rs  exec.rs  list.rs  mod.rs  mount.rs  output.rs
nyne/src/cli/output/: mod.rs  tests.rs
nyne/src/config/: mod.rs  tests.rs
nyne/src/config/fixtures/: agent_files_custom.toml  agent_files_empty.toml  agent_files_section_only.toml  lsp_custom_durations.toml  lsp_custom_server.toml  lsp_disabled.toml  lsp_full.toml  lsp_multiple_custom_servers.toml  mount.toml  mount_with_exclusions.toml  repository_hardlink.toml  sandbox_bind_mounts.toml  sandbox_bind_mounts_all_flags.toml  sandbox_custom_hostname.toml  sandbox_env.toml
nyne/src/config/snapshots/: nyne__config__tests__default_config_is_valid.snap  nyne__config__tests__deserialize_minimal_config.snap  nyne__config__tests__deserialize_mount_config.snap  nyne__config__tests__lsp_custom_server.snap  nyne__config__tests__lsp_defaults_when_omitted.snap  nyne__config__tests__lsp_multiple_custom_servers.snap
nyne/src/deep_merge/: mod.rs  tests.rs
nyne/src/dispatch/: activation.rs  context.rs  events.rs  inode.rs  invalidation.rs  mod.rs  mutation.rs  named_registry.rs  path_filter.rs  pipeline.rs  registry.rs  resolve.rs  resolver.rs  script.rs  script_registry.rs  write_mode.rs
nyne/src/dispatch/cache/: mod.rs  tests.rs
nyne/src/dispatch/content_cache/: mod.rs  tests.rs
nyne/src/dispatch/control_registry/: mod.rs  tests.rs
nyne/src/dispatch/router/: content.rs  mod.rs  readdir.rs
nyne/src/dispatch/routing/: builder.rs  ctx.rs  mod.rs  params.rs  segment.rs  tests.rs  tree.rs
nyne/src/format/: mod.rs  tests.rs
nyne/src/fuse/: attrs.rs  filesystem_impl.rs  inode_state.rs  macros.rs  mod.rs  mutations.rs  notify.rs  ops.rs  process_name_cache.rs  xattr.rs
nyne/src/fuse/attrs/: mod.rs  tests.rs
nyne/src/fuse/handles/: mod.rs  tests.rs
nyne/src/fuse/inode_map/: mod.rs  tests.rs
nyne/src/fuse/mode/: mod.rs  tests.rs
nyne/src/fuse/notify/: mod.rs  tests.rs
nyne/src/fuse/visibility_map/: mod.rs  tests.rs
nyne/src/helpers/: mod.rs
nyne/src/json/: mod.rs  tests.rs
nyne/src/node/: builtins.rs  capabilities.rs  diff_action.rs  kind.rs  middleware.rs  mod.rs  plugin.rs  visibility.rs
nyne/src/node/line_slice/: mod.rs  tests.rs
nyne/src/path_filter/: mod.rs  tests.rs
nyne/src/plugin/: control.rs  mod.rs
nyne/src/plugin/config/: mod.rs  tests.rs
nyne/src/process/: mod.rs  name_cache.rs  tests.rs
nyne/src/process/procfs/: mod.rs  tests.rs
nyne/src/procfs/: mod.rs  tests.rs
nyne/src/provider/: mod.rs  mutation.rs
nyne/src/providers/: CLAUDE.md  companion.rs  core_plugin.rs  mod.rs  names.rs  prelude.rs  tests.rs  util.rs
nyne/src/providers/directory/: mod.rs  tests.rs
nyne/src/providers/nyne/: mod.rs
nyne/src/router/: mod.rs  provider.rs  request.rs  test_support.rs
nyne/src/router/cache/: mod.rs  tests.rs
nyne/src/router/chain/: mod.rs
nyne/src/router/decorators/: slice.rs
nyne/src/router/extension/: mod.rs  tests.rs
nyne/src/router/fs/: mem.rs  mod.rs  os.rs
nyne/src/router/generation/: mod.rs  tests.rs
nyne/src/router/node/: decorators.rs  mod.rs  tests.rs
nyne/src/router/pipeline/: chain.rs  mod.rs  route.rs
nyne/src/router/route/: mod.rs
nyne/src/router/tree/: mod.rs  tests.rs
nyne/src/sandbox/: cleanup.rs  clone.rs  control.rs  mnt.rs  mod.rs  namespace.rs  overlay.rs  paths.rs  process.rs
nyne/src/sandbox/primitives/: mnt.rs  mod.rs  namespace.rs  process.rs
nyne/src/session/: env.rs  id.rs  mod.rs  state.rs  tests.rs
nyne/src/session/id/: mod.rs  tests.rs
nyne/src/templates/: handle.rs  mod.rs  tests.rs
nyne/src/text/: mod.rs  tests.rs
nyne/src/toml_merge/: mod.rs  tests.rs
nyne/src/topo/: tests.rs
nyne/src/types/: ext_counts.rs  file_kind.rs  git_dir_name.rs  mod.rs  node_kind.rs  passthrough_processes.rs  path_conventions.rs  process_visibility.rs  real_fs.rs  symbol_line_range.rs  timestamps.rs  type_map.rs
nyne/src/watcher/: mod.rs  tests.rs
plugins/analysis/: CLAUDE.md  Cargo.toml
plugins/analysis/src/: config.rs  context.rs  lib.rs  plugin.rs
plugins/cache/: Cargo.toml
plugins/cache/src/: lib.rs
plugins/claude/: CLAUDE.md  Cargo.toml
plugins/claude/src/: lib.rs  plugin.rs
plugins/coding/: CLAUDE.md  Cargo.toml
plugins/coding/src/: lib.rs  plugin.rs  services.rs  test_support.rs
plugins/companion/: Cargo.toml
plugins/companion/src/: context.rs  extensions.rs  lib.rs
plugins/diff/: Cargo.toml
plugins/diff/src/: lib.rs
plugins/fs/: Cargo.toml
plugins/fs/src/: lib.rs
plugins/git/: CLAUDE.md  Cargo.toml
plugins/git/src/: clone.rs  commit.rs  companion.rs  context.rs  history.rs  lib.rs  names.rs  plugin.rs  repo.rs  status.rs
plugins/lsp/: CLAUDE.md  Cargo.toml
plugins/lsp/src/: config.rs  context.rs  lib.rs  plugin.rs
plugins/nyne/: CLAUDE.md  Cargo.toml
plugins/nyne/src/: lib.rs  plugin.rs
plugins/slice/: Cargo.toml
plugins/slice/src/: lib.rs
plugins/source/: CLAUDE.md  Cargo.toml
plugins/source/src/: context.rs  extensions.rs  lib.rs  plugin.rs  services.rs  test_support.rs  util.rs
plugins/todo/: Cargo.toml
plugins/todo/src/: config.rs  context.rs  lib.rs  plugin.rs
plugins/visibility/: Cargo.toml
plugins/visibility/src/: context.rs  control.rs  lib.rs  passthrough.rs  process_visibility.rs
tests/integration/: CLAUDE.md  Cargo.toml
tests/integration/src/: assertions.rs  command.rs  git.rs  harness.rs  lib.rs  targets.rs
tests/integration/tests/: 01_root_paths.rs  02_file_companion.rs  03_symbol_read.rs  04_lsp_features.rs  05_file_git.rs  06_symbol_git.rs  14_markdown.rs  15_directory.rs  18_rename_preview.rs  20_edge_cases.rs  21_lsp_indexing_gating.rs
(+825 files in other folders)
