[package]
name = "nyne"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "nyne exposes your source code as a FUSE filesystem, enabling agent-optimized access to decomposed source files, markdown documents, etc."
license.workspace = true
publish.workspace = true
repository = "https://github.com/Lokaltog/nyne"

[lib]
name = "nyne"
path = "src/lib.rs"

[dependencies]
clap = { workspace = true, features = ["env", "wrap_help"] }
paste.workspace = true
petgraph.workspace = true
color-eyre.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
linkme.workspace = true
minijinja.workspace = true
parking_lot.workspace = true
strum.workspace = true
jiff.workspace = true
rustix = { workspace = true, features = ["mount", "fs", "process", "pipe", "thread", "event", "net", "system"] }
base64.workspace = true
convert_case.workspace = true
crop.workspace = true
directories.workspace = true
fuser.workspace = true
garde.workspace = true
humantime.workspace = true
humantime-serde.workspace = true
ignore.workspace = true
libc.workspace = true
notify.workspace = true
signal-hook.workspace = true
similar.workspace = true
slab.workspace = true
toml.workspace = true
console.workspace = true
smallvec.workspace = true
thiserror.workspace = true
anymap2.workspace = true
bitflags.workspace = true

[dev-dependencies]
rstest.workspace = true
insta = { workspace = true, features = ["toml", "yaml", "redactions"] }
similar-asserts.workspace = true
tempfile.workspace = true
assert_cmd.workspace = true
assert_fs.workspace = true
criterion.workspace = true
predicates.workspace = true

[features]
default = []

[lints]
workspace = true
