[package]
name = "nyne-plugin-analysis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "nyne_analysis"

[dependencies]
nyne.workspace = true
nyne-companion.workspace = true
nyne-source.workspace = true

color-eyre.workspace = true
linkme.workspace = true
serde.workspace = true
toml.workspace = true
strum.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
minijinja.workspace = true

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true
