[package]
name = "nyne-plugin-claude"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "nyne_claude"

[dependencies]
nyne.workspace = true
nyne-analysis = { workspace = true, optional = true }
nyne-source.workspace = true
nyne-lsp.workspace = true
nyne-git.workspace = true

color-eyre.workspace = true
crop.workspace = true
filetime.workspace = true
jiff.workspace = true
linkme.workspace = true
minijinja.workspace = true
nyne-macros.workspace = true
owo-colors.workspace = true
palette.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
humantime-serde.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true

[features]
default = ["analysis"]
analysis = ["dep:nyne-analysis"]

[lints]
workspace = true
