[package]
name = "nyne-plugin-claude"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "nyne_claude"

[dependencies]
nyne.workspace = true
nyne-analysis = { workspace = true, optional = true }
nyne-companion.workspace = true
nyne-source.workspace = true
nyne-visibility.workspace = true
nyne-lsp = { workspace = true, optional = true }
nyne-git.workspace = true

color-eyre.workspace = true
crop.workspace = true
filetime.workspace = true
jiff.workspace = true
linkme.workspace = true
minijinja.workspace = true
owo-colors.workspace = true
palette.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
humantime-serde.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true

[features]
default = ["analysis", "lsp"]
analysis = ["dep:nyne-analysis"]
lsp = ["dep:nyne-lsp"]

[lints]
workspace = true
