[package]
name = "nyne-plugin-companion"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "nyne_companion"

[dependencies]
nyne.workspace = true
nyne-visibility.workspace = true

color-eyre.workspace = true
linkme.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
similar-asserts.workspace = true

[lints]
workspace = true
