[package]
name = "nyne-plugin-fs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "nyne_fs"

[dependencies]
nyne.workspace = true
nyne-companion.workspace = true

color-eyre.workspace = true
linkme.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
similar-asserts.workspace = true

[lints]
workspace = true
