[package]
name = "nyne-plugin-git"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "nyne_git"

[dependencies]
nyne.workspace = true
nyne-companion.workspace = true
nyne-source.workspace = true
color-eyre.workspace = true
git2.workspace = true
linkme.workspace = true
minijinja.workspace = true
parking_lot.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
