[package]
name = "nyne-plugin-lsp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "nyne_lsp"

[dependencies]
nyne.workspace = true
nyne-macros.workspace = true
nyne-source.workspace = true

# Core
color-eyre.workspace = true
convert_case.workspace = true
linkme.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tracing.workspace = true
rustix = { workspace = true, features = ["fs"] }

# LSP
crossbeam-channel.workspace = true
lsp-types.workspace = true
url.workspace = true

# Text manipulation
crop.workspace = true

# Error types
thiserror.workspace = true

# Config serialization
humantime-serde.workspace = true
toml.workspace = true

[dev-dependencies]
insta.workspace = true
nyne-source = { workspace = true, features = ["test-support"] }
rstest.workspace = true
similar-asserts.workspace = true
tempfile.workspace = true

[features]
default = []

[lints]
workspace = true
