[package]
name = "nyne-plugin-slice"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "nyne_slice"

[dependencies]
nyne.workspace = true

color-eyre.workspace = true
linkme.workspace = true
tracing.workspace = true

[dev-dependencies]
nyne-companion.workspace = true
rstest.workspace = true
similar-asserts.workspace = true

[lints]
workspace = true
