[package]
name = "nyne-plugin-todo"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "nyne_todo"

[dependencies]
nyne.workspace = true
nyne-companion.workspace = true
nyne-source.workspace = true
nyne-git = { workspace = true, optional = true }

aho-corasick.workspace = true
tree-sitter.workspace = true
linkme.workspace = true
minijinja.workspace = true
parking_lot.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
tempfile.workspace = true

[features]
default = ["git"]
git = ["dep:nyne-git"]

[lints]
workspace = true
