[package]
name = "nyne-integration-tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "nyne_integration_tests"

[dependencies]
color-eyre.workspace = true
rstest.workspace = true
rustix = { workspace = true, features = ["process"] }
serial_test.workspace = true
tempfile.workspace = true
tracing.workspace = true

[lints]
workspace = true
